--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JSoup.classpath}
+    ${libs.JSoup.classpath}:\
+    ${libs.Jsoup.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
